--- a/23.09.14/views/board/view.html
+++ b/23.09.14/views/board/view.html
@@ -14,5 +14,9 @@
     <li>조회수: {{hit}}</li>
   </ul>
   <a href="/boards/list">리스트로 가버렷</a>
+  <a href="/boards/modify">수정</a>
+  <form method="post" action="/boards/delete">
+    <button type="submit">삭제</button>
+  </form>
 </body>
 </html>
