--- a/23.09.25_p/views/index.html
+++ b/23.09.25_p/views/index.html
@@ -6,7 +6,10 @@
   <title>Main Page</title>
 </head>
 <body>
-  Main Page
-  <a href="/boards/list">To list</a>
+  {% if user %}
+  {{user.userid}}님 환영합니다. <br /> 로그인 되었음 <a href="/users/logout">Logout</a>
+  {% else %}
+  <a href="/users/login">Login</a>
+  {% endif %}
 </body>
 </html>
